# vector-db-sizer

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: elasticsearch_quantized.yaml  generic_text_hnsw.yaml  multi_scenario.yaml  opensearch_hnsw.yaml  pgvector_halfvec.yaml  qdrant_text_hnsw.yaml
src/vector_db_sizer/: __init__.py  cli.py  config.py  models.py  scenarios.py
src/vector_db_sizer/engines/: __init__.py  base.py  common.py  elasticsearch.py  generic.py  milvus.py  opensearch.py  pgvector.py  pinecone.py  qdrant.py  registry.py  weaviate.py
src/vector_db_sizer/estimators/: __init__.py  datasets.py  indexes.py  records.py  scenario.py  storage.py  vectors.py
src/vector_db_sizer/reports/: __init__.py  csv_report.py  json_report.py  markdown.py
tests/: test_cli.py  test_datasets.py  test_engine_profiles.py  test_engine_registry.py  test_examples.py  test_indexes.py  test_records.py  test_reports.py  test_scenarios.py  test_storage.py  test_validation.py  test_vectors.py
tests/fixtures/: duplicate_scenarios.yaml
